enable gc logs